# fastapi-prac

./: docker-compose.yml  test
.devcontainer/: devcontainer.json
app/: Dockerfile  main.py  pyproject.toml
app/cruds/: item.py
app/routers/: item.py
app/schemas/: schemas.py
