[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "A simple FastAPI application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.109.1"

[tool.poetry.dev-dependencies]
yapf = "^0.3.1"
isort = "^5.13.2"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

